--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "passwordless",
-  "version": "1.1.3",
-  "description": "A node.js/express module for passwordless authentication",
+  "name": "passwordless-koa",
+  "version": "1.0.0",
+  "description": "A koa module for passwordless authentication",
   "main": "index.js",
   "scripts": {
     "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/florianheinemann/passwordless.git"
+    "url": "https://github.com/jesster2k10/passwordless-koa.git"
   },
   "keywords": [
     "node",
@@ -23,12 +23,12 @@
     "token",
     "express"
   ],
-  "author": "Florian Heinemann <florian.heinemann@gmail.com> (http://twitter.com/thesumofall)",
+  "author": "Jesse Onolememen <jesster2k10@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/florianheinemann/passwordless/issues"
+    "url": "https://github.com/jesster2k10/passwordless-koa/issues"
   },
-  "homepage": "https://github.com/florianheinemann/passwordless",
+  "homepage": "https://github.com/jesster2k10/passwordless-koa",
   "devDependencies": {
     "body-parser": "^1.13.1",
     "chai": "^4.1.2",
